--- a/pixi.toml
+++ b/pixi.toml
@@ -7,10 +7,15 @@ platforms = ["win-64"]
 version = "0.1.0"
 
 [tasks]
+gencode = { cmd = "python main.py"}
+clean = { cmd = "python clean.py"}
+
+build = {cmd = "python build.py build"}
+build_clean = {cmd = "python build.py clean"}
 
 [dependencies]
-python = ">=3.13.0,<4"
 pip = ">=24.3.1,<25"
+python = "3.12.*"
 
 [pypi-dependencies]
 opencv-python = ">=4.10.0.84, <5"
@@ -19,3 +24,4 @@ autopep8 = ">=2.3.1, <3"
 numpy = ">=2.1.2, <3"
 opencv-contrib-python = ">=4.10.0.84, <5"
 qrcode = ">=8.0, <9"
+nuitka = ">=2.4.11, <3"
