--- a/pixi.toml
+++ b/pixi.toml
@@ -6,18 +6,38 @@ name = "wepay"
 platforms = ["win-64"]
 version = "0.1.0"
 
-[tasks]
+[environments]
+default = ["release"]
+build = ["build"]
+
+[feature.release.tasks]
+gencode = { cmd = "python main.py"}
+clean = { cmd = "python clean.py"}
+
+[feature.release.dependencies]
+pip = ">=24.3.1,<25"
+python = "3.13.*"
+
+[feature.release.pypi-dependencies]
+opencv-python = ">=4.10.0.84, <5"
+pillow = ">=11.0.0, <12"
+autopep8 = ">=2.3.1, <3"
+numpy = ">=2.1.2, <3"
+opencv-contrib-python = ">=4.10.0.84, <5"
+qrcode = ">=8.0, <9"
+
+[feature.build.tasks]
 gencode = { cmd = "python main.py"}
 clean = { cmd = "python clean.py"}
 
 build = {cmd = "python build.py build"}
 build_clean = {cmd = "python build.py clean"}
 
-[dependencies]
+[feature.build.dependencies]
 pip = ">=24.3.1,<25"
 python = "3.12.*"
 
-[pypi-dependencies]
+[feature.build.pypi-dependencies]
 opencv-python = ">=4.10.0.84, <5"
 pillow = ">=11.0.0, <12"
 autopep8 = ">=2.3.1, <3"
